syntax = "proto3";

package pb.order_service;

option go_package = "pb/order_service";

import "google/protobuf/timestamp.proto";

message Order {
    string order_id = 1;
    int64 user_id = 2;
    repeated OrderItem items = 3;
    double total_amount = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message OrderItem {
    int64 product_id = 1;
    int64 quantity = 2;
    double price = 3;
}
